<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Circle</string>
    <string name="plus">+</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_money">Money</string>
    <string name="title_activity_competition">Competition</string>
    <string name="title_activity_voting">Voting</string>
    <string name="title_activity_friend">Friends</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="back">Back</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userAdded">Friend has been added!</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="email">Email address</string>
    <string name="firstNameMissing">Please enter First Name</string>
    <string name="missingFields">Please fill in all fields</string>
    <string name="lastNameMissing">Please enter Last Name</string>
    <string name="emailMissing">Please enter Email</string>
    <string name="passwordMissing">Please enter Password</string>
    <string name="circleMissing">Please enter a Circle</string>
    <string name="enterstarttimedate">Select a start time and/or date</string>
    <string name="connectionError">Could not connect to db</string>
    <string name="loginError">Login Incorrect or Not Found</string>
    <string name="dateError">Dates invalid!</string>
    <string name="welcomeMsg">Welcome, </string>
    <string name="tester">Tester</string>
    <string name="circle">Circle</string>
    <string name="registerCircle">Enter the name of the circle you wish to join. If wish to create a new circle, please enter the name of the new circle to create</string>
    <string name="title_activity_event__add">Create a new event</string>
    <string name="noStartDate">Start Date:</string>
    <string name="noStartTime">Start Time:</string>
    <string name="noEndDate">End Date:</string>
    <string name="noEndTime">End Time:</string>
    <string name="eventName">Event Name</string>
    <string name="eventDetails">Details</string>
    <string name="location">Location</string>
    <string name="eventInfo">Event Details</string>
    <string name="eventStart">Starting at…</string>
    <string name="eventEnd">Finishing at…</string>
    <string name="select">Select</string>
    <string name="done">Done</string>
    <string name="title_activity_money__owing">Money Owing</string>
    <string name="title_activity_money__split__bill">Split Bill</string>
    <string name="blankMoney">$0.00</string>
    <string name="dollarSign">$</string>
    <string name="perPerson">Per Person:</string>
    <string name="totalPrice">Total Price:</string>
    <string name="numPeople">No. of People</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_voting_add">Add a new poll</string>
    <string name="title_activity_money_owing_add">New Loan</string>
    <string name="title_activity_leaderboard_add">Add a leaderboard</string>
    <string name="title_activity_leaderboard_view">LeaderboardView</string>
    <string name="title_activity_voting_view">VotingView</string>
    <string name="question">Question</string>
    <string name="questionAsk">Ask something…</string>
    <string name="questionOptions">Options</string>
    <string name="title_activity_voting_add_question">Add Poll Option</string>
    <string name="questionAdd">Add</string>
    <string name="questionAddFinish">Add and Finish</string>
    <string name="startToAddQuestions">Add Poll Options</string>
    <string name="noPollQuestion">Please add a Poll question</string>
    <string name="enterOption">Enter a poll option</string>
    <string name="oK">OK</string>
    <string name="title_activity_money_owing">Money Owing</string>
    <string name="owes">owes you…</string>
    <string name="oweReason">because…</string>
    <string name="title_activity_voting_adapter">VotingAdapter</string>
    <string name="owe">owes</string>
    <string name="removeOwing">Remove</string>
    <string name="moneyNotUser">Only the creator can delete this</string>
    <string name="moneyDeleted">Paid!</string>
    <string name="newLeadeboardName">New Leaderboard Name</string>
    <string name="title_activity_leaderboard_home">Leaderboards</string>
    <string name="save">Save</string>
    <string name="leaderboardName">Leaderboard Name</string>
    <string name="whoOwesYou">Select the person who owes you</string>
    <string name="amountOwed">Specify amount owed</string>
    <string name="moneyOwingReason">Loan Description</string>
    <string name="amountHint">312.85</string>
    <string name="descriptionHint">Lent money to purchase a burger</string>
    <string name="logout">Logout</string>
    <string name="noInternet">No Internet available. Please connect to WiFi or Mobile Data to use this application</string>
    <string name="logoutPrompt">Do you want to log out?</string>
    <string name="logoutConfirm">Log out</string>
    <string name="internetRestored">Network has been restored</string>
    <string name="eventDeleted">Event deleted</string>
    <string name="pollDeleted">Poll deleted</string>
    <string name="leaderboardDeleted">Leaderboard deleted</string>
    <string name="errorRegistering">Error Registering</string>
    <string name="title_activity_event_past">Past Events</string>
    <string name="pastEvents">Past Events</string>
    <string name="pastPayments">Past Payments</string>
    <string name="invalidEmail">Invalid Email</string>

</resources>
