<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.id11413010.circle.app.Register">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstNameRegister"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/firstName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameRegister"
        android:layout_below="@+id/firstNameRegister"
        android:layout_centerHorizontal="true"
        android:hint="@string/lastName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailRegister"
        android:layout_below="@+id/lastNameRegister"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordRegister"
        android:layout_below="@+id/emailRegister"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/newRegister_btn"
        android:onClick="registerUser"
        android:layout_below="@+id/circleRegister"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerCircle"
        android:id="@+id/circleText"
        android:layout_below="@+id/passwordRegister"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/circleRegister"
        android:layout_below="@+id/circleText"
        android:layout_centerHorizontal="true"
        android:hint="@string/circle" />

</RelativeLayout>
