<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.id11413010.circle.app.events.Event_Add">

    <TextView
        android:id="@+id/eventInfo_label"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/eventInfo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventName_et"
        android:layout_below="@+id/eventInfo_label"
        android:hint="@string/eventName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventLocation_et"
        android:layout_below="@+id/eventName_et"
        android:hint="@string/location" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/eventDescription_et"
        android:layout_below="@id/eventLocation_et"
        android:hint="@string/eventDetails" />

    <TextView
        android:id="@+id/eventStartLabel"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:text="@string/eventStart"
        android:layout_below="@+id/eventDescription_et" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startDate"
        android:layout_below="@id/eventStartLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/noStartDate"
            android:id="@+id/eventStartDate_label"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/eventStartDate_tv" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/button"
            android:layout_below="@+id/eventStartDate_btn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="pickStartDate"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startTime"
        android:layout_below="@id/startDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/noStartTime"
            android:id="@+id/textView4"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/eventStartTime_tv" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/button3"
            android:layout_below="@+id/eventStartTime_tv"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="pickStartTime"/>
    </LinearLayout>

    <TextView
        android:id="@+id/eventEndLabel"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:text="@string/eventEnd"
        android:layout_below="@+id/startTime" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/endDate"
        android:layout_below="@+id/eventEndLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/noEndDate"
            android:id="@+id/textView3"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/eventEndDate_tv" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/button2"
            android:layout_below="@+id/editText2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="pickEndDate"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@id/endDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/noEndTime"
            android:id="@+id/textView"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/eventEndTime_tv" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/startDate_btn"
            android:layout_below="@+id/editText2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="pickEndTime"/>
    </LinearLayout>

</RelativeLayout>
