<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/questionAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/question"
        android:layout_alignStart="@+id/question" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:hint="@string/questionAsk"
        android:layout_below="@+id/questionAsk"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitBallotName"
        android:layout_below="@+id/question"
        android:layout_centerHorizontal="true"
        android:onClick="createPoll"
        android:text="@string/startToAddQuestions" />

</RelativeLayout>